--- a/assets/config/game.toml
+++ b/assets/config/game.toml
@@ -1,33 +1,7 @@
-[camera]
-mouse_sensitivity_x = 8e-4
-mouse_sensitivity_y = 5e-4
+[thing1]
+v1 = 8e-4
+v2 = 5e-4
 
-[camera.fixed_angle]
-min_distance = 10.0
-max_distance = 20.0
-zoom_speed = 0.7
-rotation_smoothing = 0.3
-translation_smoothing = 0.3
-zoom_in_smoothing = 0.3
-zoom_out_smoothing = 1.2
+[thing1.fixed_angle]
+speed = 0.7
 pitch = -80.0
-
-[camera.first_person]
-translation_smoothing = 0.01
-rotation_smoothing = 0.1
-max_pitch = 80
-min_pitch = -80
-tracking_smoothing = 1.5
-
-[camera.third_person]
-translation_smoothing = 0.5
-rotation_smoothing = 0.5
-tracking_smoothing = 0.8
-max_pitch = 80
-min_pitch = -80
-min_distance = 1.0
-max_distance = 10.0
-zoom_speed = 0.7
-min_distance_to_objects = 4e-1
-zoom_in_smoothing = 0.2
-zoom_out_smoothing = 1.2
