--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ serde = { version = "1", features = ["derive"] }
 bevy = { version = "0.10", default-features = false }
 bevy_asset_loader = { version = "0.15"}
 bevy_common_assets = { version = "0.6", features = ["toml"] } #features = ["ron", "toml"]
-
+smooth-bevy-cameras = { version = "0.8"}
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.28", default-features = false }
