--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,13 +44,13 @@ default = [
 	"bevy/bevy_text",
 	"bevy/bevy_ui",
 	"bevy/png",
-	"bevy/jpeg",
-	"bevy/hdr",
-	"bevy/zstd",
-	"bevy/ktx2",
-	"bevy/x11",
-#	"bevy/tonemapping_luts",
-#	"bevy/serialize",
+	#"bevy/jpeg",
+	#"bevy/hdr",
+	#"bevy/zstd",
+	#"bevy/ktx2",
+	#"bevy/x11",
+	#"bevy/tonemapping_luts",
+	#"bevy/serialize",
 ]
 
 [dependencies]
